# Aegis

./: README.md  pyproject.toml
main/: __init__.py  client_app.py  my_strategy.py  server_app.py
